--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,30 @@
 {
-  "name": "backend",
-  "version": "0.0.0",
-  "private": true,
+  "name": "mc-server-backend",
+  "version": "1.0.0",
+  "description": "Backend service for connecting mission control to the urc rover",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node build/index.js",
+    "start:dev": "nodemon index.ts",
+    "build": "tsc --project ./",
+    "test": "test"
   },
+  "repository": {
+    "type": "git",
+    "url": "github.com/orgs/SJSURoboticsTeam/urc-mc_server-2021"
+  },
+  "author": "Mission Control 2021",
+  "license": "ISC",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "express": "^4.17.1",
+    "swagger-ui-express": "^4.1.6"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.7.8",
+    "@types/swagger-ui-express": "^4.1.3",
+    "nodemon": "^2.0.12",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.2"
   }
 }
