--- a/IoT/Heltec Transiever/platformio.ini
+++ b/IoT/Heltec Transiever/platformio.ini
@@ -12,3 +12,6 @@
 platform = espressif32
 board = heltec_wifi_lora_32_V2
 framework = arduino
+lib_deps = 
+	sandeepmistry/LoRa@^0.8.0
+	heltecautomation/Heltec ESP32 Dev-Boards@^1.1.0
