--- a/IoT/Heltec Transiever/platformio.ini
+++ b/IoT/Heltec Transiever/platformio.ini
@@ -11,7 +11,10 @@
 [env:heltec_wifi_lora_32_V2]
 platform = espressif32
 board = heltec_wifi_lora_32_V2
+monitor_speed = 1152
 framework = arduino
 lib_deps = 
 	sandeepmistry/LoRa@^0.8.0
 	heltecautomation/Heltec ESP32 Dev-Boards@^1.1.0
+	adafruit/Adafruit MPU6050@^2.0.6
+	plerup/EspSoftwareSerial@^6.15.2
