--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/mysql": "^2.15.20",
     "@types/node": "^16.7.8",
     "@types/swagger-ui-express": "^4.1.3",
     "nodemon": "^2.0.12",
