--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "author": "Mission Control 2021",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "swagger-ui-express": "^4.1.6"
