--- a/IoT/Heltec Reciever/platformio.ini
+++ b/IoT/Heltec Reciever/platformio.ini
@@ -11,4 +11,10 @@
 [env:heltec_wifi_lora_32_V2]
 platform = espressif32
 board = heltec_wifi_lora_32_V2
+monitor_speed = 9600
 framework = arduino
+lib_deps = 
+	#sandeepmistry/LoRa@^0.8.0
+	heltecautomation/Heltec ESP32 Dev-Boards@^1.1.0
+	plerup/EspSoftwareSerial@^6.15.2
+	bblanchon/ArduinoJson@^6.19.1
