--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^3.5.1",
     "next": "12.0.8",
     "react": "17.0.2",
+    "react-chartjs-2": "^3.0.5",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
