--- a/deployment.yml
+++ b/deployment.yml
@@ -15,12 +15,12 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: smartflask-backend
+  name: gke-hello-app
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: smartflask-backend
+      app: gke-hello-app
   strategy:
     rollingUpdate:
       maxSurge: 1
@@ -29,7 +29,7 @@ spec:
   template:
     metadata:
       labels:
-        app: smartflask-backend
+        app: gke-hello-app
     spec:
       containers:
       - name: hello-app
@@ -45,11 +45,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: smartflask-backend-service
+  name: gke-hello-app-service
 spec:
   type: LoadBalancer
   ports:
     - port: 80
       targetPort: 8080
   selector:
-    app: smartflask-backend
+    app: gke-hello-app
