GPS finally works!

--- a/IoT/Heltec Transiever/platformio.ini
+++ b/IoT/Heltec Transiever/platformio.ini
@@ -14,7 +14,7 @@ board = heltec_wifi_lora_32_V2
 monitor_speed = 9600
 framework = arduino
 lib_deps = 
-	#sandeepmistry/LoRa@^0.8.0
 	heltecautomation/Heltec ESP32 Dev-Boards@^1.1.0
 	adafruit/Adafruit MPU6050@^2.0.6
+	mikalhart/TinyGPSPlus@^1.0.2
 	plerup/EspSoftwareSerial@^6.15.2
