--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -94,6 +94,6 @@ jobs:
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |-
-        kubectl apply -f backend/deployment.yml
+        kubectl apply -f deployment.yml
         kubectl rollout status deployment/$DEPLOYMENT_NAME
         kubectl get services -o wide
